# MusicMuse

./: .gitignore  README.md  TODO.md  generate_chord_progressions.py  generate_chord_vectors.py  main.ipynb  main.py  pitch_detection.ipynb  pyproject.toml  tempo_estimation.py  ultimate_guitar_chord_progression_parser.py
backend/: main.py
backend/static/css/: index.css
backend/static/js/: index.js
backend/templates/: index.html
lib/: chord2vec.py  chord_parser.py  music.py
notes/: Untitled.ipynb  chord_complexity.ipynb  chord_parser.py  pitch_detection.ipynb  rnn_names.ipynb  tempo_estimation.ipynb
notes/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  pitch_detection-checkpoint.ipynb  rnn_chord_progressions-checkpoint.ipynb  rnn_chord_progressions_classification-checkpoint.ipynb  tempo_estimation-checkpoint.ipynb
scripts/: ultimate_guitar.py
scripts/ultimate_guitar/: README.md  get_all.sh  ultimate_guitar.py
src/backend/: main.py
src/backend/templates/: index.html
src/melolib/: chord_progression_parser.py  midi.py  music.py  notation.py  wav_to_midi.py
src/melolib/.ipynb_checkpoints/: chord_parser-checkpoint.py  midi-checkpoint.py
src/notes/: chord_dataset_augmentation.ipynb  generate_melody_dataset.ipynb  midi_analysis.ipynb  pitch_detection.ipynb  rnn_chord_progressions.ipynb  rnn_chord_progressions_classification.ipynb  rnn_melody.ipynb  rnn_names.ipynb  tempo_estimation.ipynb
src/notes/.ipynb_checkpoints/: chord_dataset_augmentation-checkpoint.ipynb  generate_melody_dataset-checkpoint.ipynb  midi_analysis-checkpoint.ipynb  (+5 more)
src/trained_models/: chord_progression.py
(+7 files in other folders)
