[tool.poetry]
name = "melowave"
version = "0.1.0"
description = ""
authors = ["AyushAryal <ayusharyal100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numba = "^0.57.0"
scipy = "^1.11.1"
librosa = "^0.10.0.post2"
ipykernel = "^6.23.3"
matplotlib = "^3.7.1"
musicalbeeps = "^0.2.9"
gensound = "^0.5.3"
gensim = "^4.3.2"
lxml = "^4.9.3"
selenium = "^4.13.0"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
flask = "^3.0.0"
mido = "^1.3.2"
notebook = "^7.0.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
